# src/controllers/savedNewsController.js
@@ -2,7 +2,7 @@ const SavedNews = require('../models/SavedNews');
 const News = require('../models/News');
 
 exports.index = async (req, res) => {
-  const savedNews = SavedNews.findAll({ where: { saved_news_fk_user: req.userId } });
+  const savedNews = await SavedNews.findAll({ where: { saved_news_fk_user: req.userId } });
   if (savedNews.length === 0) return res.status(404).json({ msg: 'Nenhuma notícia encontrada.' });
 
   try {
@@ -11,10 +11,13 @@ exports.index = async (req, res) => {
     return res.status(500).json({ msg: 'Erro ao puxar notícias salvas.' });
   }
 };
-
 exports.save = async (req, res) => {
   const news = await News.findByPk(req.params.newsId);
   if (!news) return res.status(404).json({ msg: 'Nenhuma notícia encontrada.' });
+
+  if (await SavedNews.findOne({ where: { saved_news_fk_news: news.news_id } })) {
+    return res.status(400).json({ msg: 'Essa notícia já foi salva.' });
+  }
 
   try {
     const savedNews = await SavedNews.create({
@@ -24,12 +27,13 @@ exports.save = async (req, res) => {
 
     return res.json({ savedNews });
   } catch (error) {
+    console.log(error);
     return res.status(500).json({ msg: 'Erro ao salvar notícia.' });
   }
 };
 
 exports.delete = async (req, res) => {
-  const savedNews = SavedNews.findOne({
+  const savedNews = await SavedNews.findOne({
     where: {
       saved_news_fk_news: req.params.newsId, saved_news_fk_user: req.userId,
     },
@@ -37,7 +41,7 @@ exports.delete = async (req, res) => {
   if (!savedNews) return res.status(404).json({ msg: 'Nenhuma notícia encontrada.' });
 
   try {
-    const deletedSavedNews = savedNews.destroy();
+    const deletedSavedNews = await savedNews.destroy();
 
     return res.json({ deletedSavedNews });
   } catch (error) {
